--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?iloazj#1" target="_blank">首页</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/1?wzbofrkst" target="_blank">动态网</a> | <a href="https://db8nk66phkh66.cloudfront.net/2?enptrsysy" target="_blank">大纪元</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/4?kspitz" target="_blank">看中国</a> | <a href="https://d1eqe8yfgc9j6n.cloudfront.net/pHh5q?amiihau" target="_blank">新生网</a> | <a href="https://d2nbk5p6zab41i.cloudfront.net/tktpt?jurbeueqn" target="_blank">阿波罗网</a> | <a href="https://d2zq9v5psazuww.cloudfront.net/Mjpvu?repbebo" target="_blank">干净世界</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/10?mjgvs" target="_blank">退党服务</a> | <a href="https://d3bo5docy69ast.cloudfront.net/Rffqf?tzchv" target="_blank">明慧广播</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/nw9Vn?sfwktkixf" target="_blank">传奇时代</a> | <a href="https://dnfbwsos78njn.cloudfront.net/AF9AG?qmvefooa" target="_blank">新境界影视</a> | <a href="https://dfxrfb9070id6.cloudfront.net/zqMQA?vfosyn" target="_blank">文昭谈论</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/7?ihkwbtt" target="_blank">明慧</a></p><p><a href="https://d3l8osd9w9ntl9.cloudfront.net/9?mebxc" target="_blank">大法</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/3?yebkdi" target="_blank">新唐人</a> | <a href="https://d11leod1im7q2u.cloudfront.net/obAhT?pnhnqom" target="_blank">人民报</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/xXNHu?lugcznkz" target="_blank">放光明</a> | <a href="https://dl1ez95kskssm.cloudfront.net/5?vyyoihhzs" target="_blank">新纪元</a> | <a href="https://dmepc9x6zy689.cloudfront.net/6?tcsdfu" target="_blank">希望之声</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/11?wczwsowh" target="_blank">无界网络</a> | <a href="https://d3abchfok6e2j.cloudfront.net/Pueji?flxyd" target="_blank">追查国际</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/16?tsgky" target="_blank">明慧之窗</a> | <a href="https://dhltq9qxjnmw2.cloudfront.net/LdvzZ?ujhrmbv" target="_blank">细语人生</a> | <a href="https://d5tsat6yropq6.cloudfront.net/fBn3r?gjocmndz" target="_blank">新世纪影视</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/PUWMb?sftmyd" target="_blank">江峰时刻</a> | <a href="https://d2a8dyhoj0w562.cloudfront.net/8?rlftr" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?rdpdbl#1" target="_blank">首页</a> | <a href="https://d37g5boc7rm625.cloudfront.net/1?ryuifinr" target="_blank">动态网</a> | <a href="https://doyvntponycdh.cloudfront.net/2?bnqlgkvag" target="_blank">大纪元</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/4?fbsxrtv" target="_blank">看中国</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/pHh5q?wiplxil" target="_blank">新生网</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/tktpt?eipjpe" target="_blank">阿波罗网</a> | <a href="https://d1jex6syje0yji.cloudfront.net/Mjpvu?wegbyspw" target="_blank">干净世界</a> | <a href="https://d2agd1dsojkgmu.cloudfront.net/10?teltzuo" target="_blank">退党服务</a> | <a href="https://dqcg8pdekez1x.cloudfront.net/Rffqf?tgszzprfh" target="_blank">明慧广播</a> | <a href="https://db8nk66phkh66.cloudfront.net/nw9Vn?mxnmq" target="_blank">传奇时代</a> | <a href="https://d3uam2jhpjrvu5.cloudfront.net/AF9AG?gpdbnr" target="_blank">新境界影视</a> | <a href="https://doqmgyop4u892.cloudfront.net/zqMQA?qgulcy" target="_blank">文昭谈论</a> | <a href="https://d324e5bfxb7dri.cloudfront.net/7?woyui" target="_blank">明慧</a></p><p><a href="https://d2rq98et8nmaey.cloudfront.net/9?lxtuj" target="_blank">大法</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/3?fopzpna" target="_blank">新唐人</a> | <a href="https://ddpul9mprf1bn.cloudfront.net/obAhT?imkygotd" target="_blank">人民报</a> | <a href="https://d21y52w6f35pla.cloudfront.net/xXNHu?thalwoz" target="_blank">放光明</a> | <a href="https://dtfavhq5d1ym2.cloudfront.net/5?rvuxodgv" target="_blank">新纪元</a> | <a href="https://dlph7fabhsbfp.cloudfront.net/6?sjtqbvumy" target="_blank">希望之声</a> | <a href="https://d22owz1tif1d5u.cloudfront.net/11?zgceo" target="_blank">无界网络</a> | <a href="https://duxu97yt14q37.cloudfront.net/Pueji?lbnlfeoz" target="_blank">追查国际</a> | <a href="https://djwddd4nnr0na.cloudfront.net/16?snnff" target="_blank">明慧之窗</a> | <a href="https://d239x61949z6p.cloudfront.net/LdvzZ?vkvwam" target="_blank">细语人生</a> | <a href="https://d8jw662akk94j.cloudfront.net/fBn3r?bbtyecfqy" target="_blank">新世纪影视</a> | <a href="https://dme0bxbvomkno.cloudfront.net/PUWMb?qkxsyzsa" target="_blank">江峰时刻</a> | <a href="https://dqgl8k1bfvgsc.cloudfront.net/8?fxagp" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137863.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/12/id14133199-d6015ba8f01975fa29e432d193192aaf-320x200.jpeg"><p align="center">利率下跌想买房？专家预测明年美房市趋势</p></a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137863.md#1" title="利率下跌想买房？专家预测明年美房市趋势""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14133199-d6015ba8f01975fa29e432d193192aaf-320x200.jpeg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137660.md#1" title="上海金融高管密集调整 高层争夺钱袋子升级""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137661-16_000_32LK8AG-320x200.jpg">&nbsp;</a>
@@ -13,19 +13,19 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137291.md#1" title="如何与下一代一起度过一个传统的圣诞节""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137303-Old-Fashioned-Christmas-Traditions2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137013.md#1" title="中共公布新器官条例难圆谎 专家揭黑幕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/11/id14110163-645503-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://19920513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137727.md#1">中共国安部禁唱衰经济 专家：或加速崩溃</a><br>
-:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137863.md#1">利率下跌想买房？专家预测明年美房市趋势</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137779.md#1">科威特国王纳瓦夫去世 王储马沙尔继任</a><br>
+:clock8: <em>17分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137502.md#1">【时事金扫描】北京地铁爆腐败内幕 事故诡异</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137727.md#1">中共国安部禁唱衰经济 专家：或加速崩溃</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137863.md#1">利率下跌想买房？专家预测明年美房市趋势</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137779.md#1">科威特国王纳瓦夫去世 王储马沙尔继任</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137856.md#1">报告：苹果为发售Vision Pro装置做准备</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137851.md#1">谷歌在美国推出AI笔记应用程序</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137829.md#1">苹果iOS 17.2更新 加入日志App等新功能</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136734.md#1">中共党魁访越遭冷遇？ 央视不敢报</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135832.md#1">越南拒北京“命运共同体”专家析深层分歧</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137649.md#1">周海媚去世前曾讲述一件诡异事</a><br>
-<a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136951.md#1">青海旧部连续被抓 知情人：赵乐际岌岌可危</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137515.md#1">消息：中共政府和国企加速实施iPhone禁令</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136951.md#1">青海旧部连续被抓 知情人：赵乐际岌岌可危</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136668.md#1">多国表态支持菲律宾 中共连连跳脚无人理</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136844.md#1">河南53岁高校校长猝死 网络热议与COVID有关</a><br>
 <br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
@@ -49,7 +49,9 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137619.md#1">触怒中共遭通缉 许颖婷：它害怕说真话的人</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137522.md#1">非洲猪瘟未消散 中国北方疫情升温</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137525.md#1">美驻华大使：对美中关系未来并不乐观</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137502.md#1">【时事金扫描】北京地铁爆腐败内幕 事故诡异</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137471.md#1">【秦鹏观察】中南海祭出3大招 耶伦批北京胡来</a><br>
+<a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137511.md#1">大倒退至1997年水平 港股被印度超越</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137496.md#1">【新唐人快报】全民禁言 中共清零敏感经济言论</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137475.md#1">获封“救视主” 南宫珉获年度最佳韩剧演员冠军</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137418.md#1">【新闻大破解】中共介选台湾 当对美斗争主战场</a><br>
@@ -95,15 +97,13 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134473.md#1">港股股指倒退26年 东方明珠蒙尘背后</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135107.md#1">【秦鹏观察】史上最严厉！美将升级打击中共</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135183.md#1">周海媚离世 曾高调为中共疫苗站台</a><br>
-<a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135057.md#1">港片《灯火阑珊》竞逐奥斯卡资格遭撤 原因曝光</a><br>
-<a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134986.md#1">被爆猝逝前失联4小时 港星周海媚死因成谜</a><br>
-<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3hjrbk4icph2d.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.34.241.65/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 38,208</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d154eopkxhvbe4.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://1.169.74.91/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 38,208</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 423,508,717 人
+!共 423,508,926 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137444.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137664-w1200x800-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137444.md#1">【晚间新闻】遭港府悬赏通缉 许颖婷：坚持初心</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137034.md#1">继家人被威胁后 蔡慎坤员工也遭警察盘问</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136295.md#1">CECC主席写明信片 关注遭中共重判的牛腾宇</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135393.md#1">【晚间新闻】援乌经费告急 泽连斯基紧急访美</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135394.md#1">【全球新闻】上海医院疫情大爆发 护工披露内情</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134768.md#1">分析：中共借一带一路扩展活摘器官链条</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137646.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/03/id13944470-GettyImages-1231802238-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137646.md#1">阿里拟减持3.9亿美元股份 小鹏汽车股价暴跌</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137659.md#1">【全球新闻】大陆医生：中共病毒感染爆发式增长</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137118.md#1">中共不准“唱衰经济”国安上场摀嘴 引关注</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137038.md#1">中共中央经济会议后 大陆A股连跌三天</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136969.md#1">中国11月新房价持续疲软 59城市下跌</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136751.md#1">【新唐人快报】急需现金抵债 碧桂园和万达分手</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137727.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/04/dfed3f93b4d5b2bfcee7e588808f345c-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137727.md#1">中共国安部禁唱衰经济 专家：或加速崩溃</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137725.md#1">台湾史研究讨论会 游锡堃：中共对台虎视眈眈</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136979.md#1">【环球直击】英美谴责港府通缉五港人 关切黎智英案</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137606.md#1">台军方：中共海南发射卫星 国军周密掌握动态</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137513.md#1">美批准3亿美元军售案 支援台湾战术资讯系统</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137751.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14137765-472b653bfa76acbbd035083f58aa804f-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137751.md#1">湖南百货市场起火 五层楼被烧 商家损失惨重</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137749.md#1">中国现中共病毒新变异株 将有新一轮感染高峰</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137697.md#1">最强寒潮来袭 广东“一夜入冬”</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137516.md#1">北京地铁再传惊魂 站台电梯“轰一声陷下去”</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137480.md#1">北京地铁事故肇因引关注 国产信号系统遭质疑</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137311.md#1">寒流袭击中国之际 俄罗斯遇罕见暴风雪</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137766.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/12/id13434767-GettyImages-1237203923-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137766.md#1">商汤科技55岁创办人猝死 公司曾被美国制裁</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137666.md#1">小作文事件后 东方甄选CEO孙东旭被免职</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137438.md#1">自曝女儿个性像霍建华 林心如不愿她进演艺圈</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137323.md#1">安徽三岁半宝宝独自在家冲奶粉喝 引关注</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137353.md#1">亚裔妈妈把孩子关进笼子 在美国佛州被捕</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137078.md#1">“鼠头鸭脖”案责任方被罚款 网民提出质疑</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136191.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14136197-2312140216292378-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136191.md#1">双子座流星雨14日晚间登场 每小时约150颗</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14134472.md#1">新生儿数量减少 湖南安徽等多地幼儿园关闭</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134392.md#1">国家地理评2024最佳旅游地 纽约台南上榜</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14130883.md#1">台湾花莲秘境 美丽的拉索埃涌泉生态园区</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128083.md#1">北京等多地罕见现极光 气象局发布地磁暴预警</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125811.md#1">阿里云一个月内第二次服务中断 网络再度热议</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a><br>
